--- a/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
+++ b/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
@@ -154,7 +154,7 @@ what data is internal to the graph for optimization, and dependencies don't need
 to be inferred.
 
 It is valid to combine these two mechanisms sequentially when constructing a
-graph, however it is not valid to concurrently use them. An error will be thrown
+graph, however it is not valid to use them concurrently. An error will be thrown
 if a user attempts to use the explicit API to add a node to a graph which is
 being recorded to by a queue.
 
@@ -215,7 +215,7 @@ function, empty operation, or device memory allocation/free.
 
 | Edge
 | In the explicit graph building API edges are defined by the user. This is
-either through buffer accessors, the `make_edge()` free function, or by passing
+either through buffer accessors, the `make_edge()` function, or by passing
 dependent nodes on creation of a new node.
 |===
 
@@ -243,12 +243,10 @@ these can be seen as specialized kernels executing on the device.
 
 | Edge
 | An edge in a queue recorded graph represents a data dependency between two
-nodes. These dependencies are expressed by the user code through buffer
-accessors. There is also the partial ability to track USM data dependencies
-provided the pointers used in the graph nodes are the same. With the limitation
-that a node taking an offset USM pointer input will not be identified as having
-an edge to another node taking a pointer input to the base address of the same
-USM allocation.
+nodes. Data dependencies can naturally be expressed in user code through buffer
+accessors. There is also the ability for the SYCL runtime to track USM
+allocation dependencies based on the pointers used in recorded command groups,
+and construct an edge between nodes where the same USM allocation is used.
 |===
 
 === API Modifications
@@ -265,8 +263,6 @@ enum class queue_state {
 };
 
 class node {};
-
-void make_edge(node sender, node receiver);
 
 // State of a graph
 enum class graph_state {
@@ -291,6 +287,8 @@ public:
 
   node add_malloc_device(void *&data, size_t numBytes, const std::vector<node>& dep = {});
   node add_free(void *data, const std::vector<node>& dep = {});
+
+  void make_edge(node sender, node receiver);
 };
 
 template<>
@@ -314,9 +312,10 @@ public:
 
 === Node
 
-Node is a class that encapsulates tasks like SYCL kernel functions or host tasks
-for deferred execution. A graph has to be created first, the structure of a
-graph is defined second by adding nodes and edges.
+Node is a class that encapsulates tasks like SYCL kernel functions, device
+memory allocations/frees, or host tasks for deferred execution. A graph has to
+be created first, the structure of a graph is defined second by adding nodes and
+edges.
 
 [source,c++]
 ----
@@ -325,29 +324,6 @@ namespace sycl::ext::oneapi::experimental {
 }
 ----
 
-=== Edge
-
-A dependency between two nodes representing a happens-before relationship.
-`sender` and `receiver` may be associated to different graphs.
-
-[source,c++]
-----
-namespace sycl::ext::oneapi::experimental {
-  void make_edge(node sender, node receiver); // Adds a dependency between two nodes
-}
-----
-
-Parameters:
-
-* `sender` - Node which will be a dependency of `receiver`.
-
-* `receiver` - Node which will be dependent on `sender`.
-
-Exceptions:
-
-* Throws synchronously with error code `invalid` if a queue is recording
-  commands to any graph associated with `sender` or `receiver`.
-
 === Graph
 
 :crs: https://www.khronos.org/registry/SYCL/specs/sycl-2020/html/sycl-2020.html#sec:reference-semantics
@@ -355,11 +331,9 @@ Exceptions:
 This extension adds a new `command_graph` object which follows the
 {crs}[common reference semantics] of other SYCL runtime objects.
 
-`command_graph` is a class that represents a directed acyclic graph of nodes. A
-graph can have different states, can be nested, can have multiple root nodes
-that are scheduled for execution first and multiple leaf nodes that are
-scheduled for execution last. The execution of a graph has been completed when
-all leaf node tasks have been completed.
+A `command_graph` represents a directed acyclic graph of nodes, where each node
+represents a single command or a sub-graph. The execution of a graph completes
+when all of its nodes have completed.
 
 A `command_graph` is built up by either recording queue submissions or
 explicitly adding nodes, then once the user is happy that the graph is complete,
@@ -476,6 +450,33 @@ Exceptions:
 
 * Throws synchronously with error code `invalid` if a queue is recording
   commands to the graph.
+
+|
+[source,c++]
+----
+void make_edge(node sender, node receiver);
+----
+
+|Creates a dependency between two nodes representing a happens-before relationship.
+
+Preconditions:
+
+* This member function is only available when the `command_graph` state is
+  `graph_state::modifiable`.
+
+Parameters:
+
+* `sender` - Node which will be a dependency of `receiver`.
+
+* `receiver` - Node which will be dependent on `sender`.
+
+Exceptions:
+
+* Throws synchronously with error code `invalid` if a queue is recording
+  commands to the graph.
+
+* Throws synchronously with error code `invalid` if `sender` or `receiver`
+  are not valid nodes created from the graph.
 
 |
 [source,c++]
