[SYCL][Doc] Device query for graphs support
Although we have an emulation mode for when a SYCL backend
doesn't support PI/UR command-buffers, we don't have good implementation coverage
across it's usage on all possible backends.

Providing a support query would allow us to limit the backends we support
while an experimental extension to say CUDA and Level Zero, and maybe
OpenCL. Rather than
having users with FPGA and esimd_emulator trying to use the extension and
crashing because we've not tested these platforms even with emulation
mode.

We could remove this query once the implementation is more mature and
we can trust emulation mode support on all backends, but I don't
think that's the case at the moment.

--- a/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
+++ b/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
@@ -404,6 +404,20 @@ public:
 }  // namespace sycl
 ----
 
+=== Device Info Query
+
+Due to the experimental nature of the extension, support is not available across
+all devices. The following device support query is added to report devices which
+are currently supported.
+
+[source, c++]
+----
+sycl::ext::oneapi::experimental::info::device::graph_support;
+----
+
+When passed to `device::get_info<...>()`, the function returns `true` if the SYCL
+`device` supports using this graph extension.
+
 === Node
 
 :crs: https://www.khronos.org/registry/SYCL/specs/sycl-2020/html/sycl-2020.html#sec:reference-semantics
@@ -547,6 +561,9 @@ Exceptions:
 
 * Throws synchronously with error code `invalid` if `syclDevice` is not
 associated with `syclContext`.
+
+* Throws synchronously with error code `invalid` if `syclDevice` does not
+  <<device-info-query, report support for this extension>>.
 
 |===
 
